@@ -1,0 +1,9 @@
+
+   http://ofset.sf.net/gcompris
+   has a full list of changes since the previous release.
+
+   On Windows, Gcompris requires GTK, which can be found
+   at <http://www.dropline.net/gtk/>.
+
+   Information on building gcompris on Windows can be found in README.mingw.
+
