@@ -179,6 +179,7 @@ src/boards/target.c
 src/boards/traffic.c
 src/boards/wordsgame.c
 src/gcompris/about.c
+src/gcompris/boards.c
 src/gcompris/config.c
 src/gcompris/gameutil.c
 src/gcompris/gcompris-edit.c
@@ -187,6 +188,7 @@ src/gcompris/gcompris.h
 src/gcompris/help.c
 src/gcompris/images_selector.c
 src/gcompris/interface.c
+src/gcompris/log.c
 src/gcompris/oggplayer.c
 src/gcompris/properties.c
 src/gcompris/skin.c
